# wordle-entropy

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
core/: Cargo.toml
core/src/: algo.rs  arrays.rs  data.rs  entropy.rs  lib.rs  main.rs  solvers.rs  structs.rs  to_seq.rs  translator.rs
native/: Cargo.toml
native/core/: Cargo.toml
native/core/src/: algo.rs  arrays.rs  calibration.rs  data.rs  entropy.rs  hints_computed.rs  lib.rs  solvers.rs  structs.rs  translator.rs
native/core/src/structs/: hints.rs  knowledge.rs  mod.rs  word.rs
src/: algo.rs  data.rs  entropy.rs  main.rs  math.rs  solvers.rs  structs.rs  util.rs
static_bp/: app.py  index.html  worker.js
web/: .gitignore  Cargo.toml  Makefile  serve.py
web/src/: app.rs  app2.rs  demo.rs  lib.rs  main.rs  main_app.rs  simulation.rs  util.rs  word_set.rs  worker.rs  worker2.rs  worker_atom.rs
web/src/components/: calibration.rs  entropy_plot.rs  hinted_word.rs  mod.rs  plot.rs  select_words.rs  simulation_detail.rs  simulation_history.rs  toast.rs  turns_plot.rs  word_set_select.rs
web/src/pages/: entropy_calculation.rs  mod.rs  page_not_found.rs  simulation.rs  solver.rs  word_collections.rs  word_sets.rs
web/src/plots/: entropies_plot.rs  expected_turns_plot.rs  mod.rs  turns_plot.rs
web/static/: index.html  module-workers-polyfill.min.js
web/static/css/: main.css
web/static/data/: default_word_sets.json  english_words_with_probs.csv  polish_words_with_probs.csv
web2/: Cargo.toml  bootstrap.js  package.json  webpack.config.js
web2/src/: app.rs  lib.rs  worker.rs
