[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
indexmap = "1.8.0"
itertools = "0.10.3"
ndarray = {version = "0.15.4", features = ["rayon"]}
rayon = "1.5.1"
