[package]
name = "wordle-entropy-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
indexmap = { version = "1.8.0", features = ["serde-1"] }
itertools = "0.10.3"
ndarray = {version = "0.15.4"}
getrandom = {version = "*", features = ["js"]}
rand = "0.8.5"
rayon = {version = "1.5.1", optional = true}
serde = { version = "1", features = ["derive"] }

[features]
default = ["parallel"]
parallel = ["rayon", "ndarray/rayon"]

[dev-dependencies]
rstest = "0.12.0"