[package]
name = "wordle-entropy-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

yew = "0.19.3"
wordle-entropy-core = { path = "../core" }
#wordle-entropy-core = { path = "../core", default-features = false }
strum = "0.24.0"
strum_macros = "0.24.0"
wee_alloc = { version = "0.4.4", optional = true }
log = "0.4.14"
wasm-bindgen-futures = "0.4.29"
gloo-worker = { git = "https://github.com/krzyz/gloo" }
gloo-timers = { git = "https://github.com/krzyz/gloo" }
gloo-file = { git = "https://github.com/krzyz/gloo" }
js-sys = "0.3"
once_cell = "1.8"
wasm-bindgen = "0.2.79"
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
wasm-logger = "0.2"


[dependencies.web-sys]
version = "0.3.56"
features = [
  'KeyboardEvent',
  'Navigator',
  'Window',
  'Performance',
  'PerformanceTiming',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']