[package]
name = "wordle-entropy-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

yew = "0.19.3"
wordle-entropy-core = { path = "../native/core" }
strum = "0.24.0"
strum_macros = "0.24.0"
wee_alloc = { version = "0.4.4", optional = true }
log = "0.4.14"
wasm-bindgen-futures = "0.4.29"
gloo-worker = { git = "https://github.com/krzyz/gloo" }
gloo-timers = { git = "https://github.com/krzyz/gloo" }
gloo-file = { git = "https://github.com/krzyz/gloo" }
js-sys = "0.3"
wasm-bindgen = "0.2.79"
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
wasm-logger = "0.2"
hsl = "0.1.1"
num-complex = "0.4.0"
rand = "0.8.5"
rayon = "1.5.1"
plotters = "0.3.1"
plotters-canvas = "0.3.0"
yew-router = "0.16.0"
gloo-storage = "0.2.0"
bounce = { git = "https://github.com/futursolo/bounce.git", rev = "5869951" }
reqwest = "0.11.10"
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1.0.56"
serde_cbor = "0.11.2"
nalgebra = "0.29"
varpro = "0.3.0"
num-traits = "0.2.14"
num = "0.4.0"
gloo-events = "0.1.1"
gloo-utils = "0.1.2"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'DomRect',
  'DomStringMap',
  'HtmlElement',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'Navigator',
  'Window',
  'Performance',
  'PerformanceTiming',
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[patch.crates-io]
gloo-console = { git = "https://github.com/krzyz/gloo" }
gloo-timers = { git = "https://github.com/krzyz/gloo" }

[profile.release]
opt-level = 3
