[package]
name = "wordle-entropy-web-2"
version = "0.2.0"
authors = ["Yew Maintainers <maintainers@yew.rs"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19.3"
wordle-entropy-core = { path = "../core", default-features = false }
strum = "0.24.0"
strum_macros = "0.24.0"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
gloo-file = "0.2.1"
log = "0.4.14"
#wasm-bindgen-rayon = {version = "1.0.3"}
wasm-bindgen-futures = "0.4.29"
gloo-worker = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'KeyboardEvent',
  'Navigator',
  'Window'
]
